--- a/beginner_tut/CMakeLists.txt
+++ b/beginner_tut/CMakeLists.txt
@@ -46,7 +46,7 @@ generate_messages(
 ## CATKIN_DEPENDS: catkin_packages dependent projects also need
 ## DEPENDS: system dependencies of this project that dependent projects also need
 catkin_package(
-   INCLUDE_DIRS include
+#   INCLUDE_DIRS include
 #  LIBRARIES beginner_tut
 #  CATKIN_DEPENDS roscpp rospy std_msgs
 #  DEPENDS system_lib
